--- a/registroMovimiento.html
+++ b/registroMovimiento.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro de Movimiento Financiero</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
 </head>
 <body>
-    
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        Registro de Movimiento Financiero
+                    </div>
+                    <div class="card-body">
+                        <form id="financial-transaction-form">
+                            <div class="mb-3">
+                                <label for="transaction-type" class="form-label">Tipo</label>
+                                <select class="form-control" id="transaction-type" name="transaction-type" required>
+                                    <option value="egreso">Egreso</option>
+                                    <option value="ingreso">Ingreso</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="description" class="form-label">Descripción</label>
+                                <input type="text" class="form-control" id="description" name="description" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="amount" class="form-label">Valor</label>
+                                <input type="number" class="form-control" id="amount" name="amount" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="authorizer" class="form-label">Quién Autoriza</label>
+                                <select class="form-control" id="authorizer" name="authorizer" required>
+                                    <option value="autorizador1">Autorizador 1</option>
+                                    <option value="autorizador2">Autorizador 2</option>
+                                    <!-- Agrega más opciones según sea necesario -->
+                                </select>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Registrar y Generar PDF</button>
+                        </form>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Siguiente interfaz</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    const financialTransactionForm = document.getElementById("financial-transaction-form");
+
+    financialTransactionForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        // Obtener los valores del formulario
+        const transactionType = document.getElementById("transaction-type").value;
+        const description = document.getElementById("description").value;
+        const amount = document.getElementById("amount").value;
+        const authorizer = document.getElementById("authorizer").value;
+
+        // Crear un nuevo documento PDF
+        const doc = new jsPDF();
+        doc.text("Registro de Movimiento Financiero", 10, 10);
+        doc.text(`Tipo: ${transactionType}`, 10, 20);
+        doc.text(`Descripción: ${description}`, 10, 30);
+        doc.text(`Valor: ${amount}`, 10, 40);
+        doc.text(`Quién Autoriza: ${authorizer}`, 10, 50);
+
+        // Guardar el PDF o mostrarlo en una nueva ventana
+        doc.save("registro_financiero.pdf");
+        
+        // Aquí puedes enviar los datos del formulario al servidor si es necesario
+
+        // Restablecer el formulario después de enviar
+        financialTransactionForm.reset();
+    });
+});
+</script>
+
 </body>
 </html>
