--- a/verMovimiento.html
+++ b/verMovimiento.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ver Movimientos Financieros</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="container mt-5">
+        <h1>Movimientos Financieros</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Tipo</th>
+                    <th>Descripción</th>
+                    <th>Valor</th>
+                    <th>Autorizador</th>
+                </tr>
+            </thead>
+            <tbody id="financial-transactions-body">
+                <!-- Aquí se insertarán los datos de ejemplo -->
+            </tbody>
+        </table>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Siguiente interfaz</button>
+
+    <button type="submit" class="btn btn-primary">Home</button> 
+
+    <script>
+        // Datos de ejemplo
+        const exampleData = [
+            { tipo: 'Egreso', descripcion: 'Compra de suministros', valor: 500, autorizador: 'Autorizador 1' },
+            { tipo: 'Ingreso', descripcion: 'Venta de productos', valor: 1000, autorizador: 'Autorizador 2' },
+            { tipo: 'Egreso', descripcion: 'Pago de factura', valor: 300, autorizador: 'Autorizador 1' },
+        ];
+
+        // Función para llenar la tabla con los datos de ejemplo
+        function fillTableWithData(data) {
+            const tableBody = document.getElementById("financial-transactions-body");
+
+            data.forEach((item) => {
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>${item.tipo}</td>
+                    <td>${item.descripcion}</td>
+                    <td>${item.valor}</td>
+                    <td>${item.autorizador}</td>
+                `;
+                tableBody.appendChild(row);
+            });
+        }
+
+        // Llama a la función para llenar la tabla con los datos de ejemplo
+        fillTableWithData(exampleData);
+    </script>
 </body>
 </html>
