--- a/registroEmpresa.html
+++ b/registroEmpresa.html
@@ -44,7 +44,8 @@
                             <button type="submit" class="btn btn-primary">Registrar Empresa</button>
                         </form>
                     </div>
-                    <button type="submit" class="btn btn-primary">Siguiente interfaz</button> 
+                    <button type="submit" class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5500/registroMovimiento.html'">Siguiente Interfaz</button>
+
                 </div>
             </div>
         </div>
