--- a/verMovimiento.html
+++ b/verMovimiento.html
@@ -27,7 +27,8 @@
 
     <button type="submit" class="btn btn-primary">Siguiente interfaz</button>
 
-    <button type="submit" class="btn btn-primary">Home</button> 
+    <button type="button" class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5500/index.html'">Home</button>
+      
 
     <script>
         // Datos de ejemplo
