--- a/registroMovimiento.html
+++ b/registroMovimiento.html
@@ -45,7 +45,8 @@
                             <button type="submit" class="btn btn-primary">Registrar y Generar PDF</button>
                         </form>
                     </div>
-                    <button type="submit" class="btn btn-primary">Siguiente interfaz</button>
+                    <button type="submit" class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5500/verMovimiento.html'">Siguiente Interfaz</button>
+
                 </div>
             </div>
         </div>
