--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Registro de Empresa</h5>
                         <p class="card-text">Registra tu empresa aquí.</p>
-                        <a href="http://127.0.0.1:5500/registroEmpresa.html" class="btn btn-primary">Ir al Registro</a>
+                        <a href="https://genuine-alpaca-5ebcf2.netlify.app/registroempresa" class="btn btn-primary">Ir al Registro</a>
                     </div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Registro de Movimiento Financiero</h5>
                         <p class="card-text">Registra movimientos financieros aquí.</p>
-                        <a href="http://127.0.0.1:5500/registroMovimiento.html" class="btn btn-primary">Ir al Registro</a>
+                        <a href="https://genuine-alpaca-5ebcf2.netlify.app/registromovimiento" class="btn btn-primary">Ir al Registro</a>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ver Movimientos Financieros</h5>
                         <p class="card-text">Visualiza los movimientos financieros aquí.</p>
-                        <a href="http://127.0.0.1:5500/verMovimiento.html" class="btn btn-primary">Ir a la Vista</a>
+                        <a href="https://genuine-alpaca-5ebcf2.netlify.app/vermovimiento" class="btn btn-primary">Ir a la Vista</a>
                     </div>
                 </div>
             </div>
@@ -42,8 +42,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Registro de Empleado</h5>
-                        <p class="card-text">Registra tu empresa aquí.</p>
-                        <a href="http://127.0.0.1:5500/registroEmpleado.html" class="btn btn-primary">Ir al Registro</a>
+                        <p class="card-text">Registra empleado aquí.</p>
+                        <a href="https://genuine-alpaca-5ebcf2.netlify.app/registroempleado" class="btn btn-primary">Ir al Registro</a>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                     <div class="card-body">
                         <h5 class="card-title">LOGIN</h5>
                         <p class="card-text">Registra tu empresa aquí.</p>
-                        <a href="http://127.0.0.1:5500/login.html" class="btn btn-primary">Ir al LOGIN</a>
+                        <a href="https://genuine-alpaca-5ebcf2.netlify.app/login" class="btn btn-primary">Ir al LOGIN</a>
                     </div>
                 </div>
             </div>
