--- a/verMovimiento.html
+++ b/verMovimiento.html
@@ -27,7 +27,7 @@
 
     <button type="submit" class="btn btn-primary">Siguiente interfaz</button>
 
-    <button type="button" class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5500/index.html'">Home</button>
+    <button type="button" class="btn btn-primary" onclick="window.location.href='https://genuine-alpaca-5ebcf2.netlify.app/'">Home</button>
       
 
     <script>
