--- a/login.html
+++ b/login.html
@@ -162,7 +162,7 @@
                          
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5500/registroEmpleado.html'">Siguiente Interfaz</button>
+                    <button type="submit" class="btn btn-primary" onclick="window.location.href='https://genuine-alpaca-5ebcf2.netlify.app/registroempleado'">Siguiente Interfaz</button>
                 </div>
             </div>
         </div>
