--- a/registroEmpleado.html
+++ b/registroEmpleado.html
@@ -36,7 +36,7 @@
                             <button type="submit" class="btn btn-primary">Registrar</button>
                         </form>
                     </div>
-                    <button type="submit" class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5500/registroEmpresa.html'">Siguiente Interfaz</button>
+                    <button type="submit" class="btn btn-primary" onclick="window.location.href='https://genuine-alpaca-5ebcf2.netlify.app/registroempresa'">Siguiente Interfaz</button>
 
                 </div>
             </div>
